# zuri_nbt

./: Cargo.toml  README.md
src/: decode.rs  encode.rs  encoding.rs  err.rs  impl.rs  lib.rs  reader.rs  tag.rs  view.rs  writer.rs
src/serde/: deserialize.rs  mod.rs  serialize.rs
