[package]
name = "zuri_nbt"
version = "0.5.0"
edition = "2021"
description = "Read and write minecraft NBT data"
repository = "https://github.com/zuri-mc/zuri_nbt/"
license = "MIT"
keywords = ["nbt", "minecraft", "bedrock"]
categories = ["encoding", "parser-implementations"]
exclude = [".github/"]

[dependencies]
byteorder = "1.5.0"
cesu8 = "1.1.0"
indexmap = "2.9.0"
serde = { version = "1.0.162", optional = true }
strum = "0.25.0"
strum_macros = "0.25.1"
thiserror = "1.0.40"

[dev-dependencies]
serde = { version = "1.0.162", features = ["derive"] }
